--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,27 @@
-name: Run Playwright Script
+name: Playwright Headed Mode
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ main ]
 
 jobs:
-  run-script:
+  run-playwright:
     runs-on: ubuntu-latest
+    timeout-minutes: 355
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Install dependencies
-        run: npm install
+      - run: npm install
 
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps chromium
+      - run: npx playwright install --with-deps chromium
 
-      - name: Run Script
-        run: node test.js
+      - name: Install Xvfb
+        run: sudo apt-get update && sudo apt-get install -y xvfb
+
+      - name: Run Script in Virtual Display
+        run: xvfb-run --auto-servernum node test.js
         
