--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        instance: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18]
+        instance: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]
 
     steps:
       - name: Checkout repository
@@ -41,7 +41,7 @@ jobs:
       - name: Download User Agent Files
         run: |
           wget "https://www.dropbox.com/scl/fi/73l2vinlzrs3lewyy5clr/desktop_user_agents_500k_with_viewport.txt.gz?rlkey=yp2i5bukhpk94uo10uwqup4xe&st=v6iin0dk&dl=1" -O desktop_user_agents_500k_with_viewport.txt.gz
-          wget "https://www.dropbox.com/scl/fi/h4f8rb1pcvjrt0t77wh52/mobile_user_agents_500k_with_viewport.txt.gz?rlkey=9i7oj247fo0pby9f0m9w7w5u0&st=xu6yetk3&dl=1" -O mobile_user_agents_500k_with_viewport.txt.gz
+          wget "https://www.dropbox.com/scl/fi/spqdipi6lucq4903v22e2/mobile_user_agents_500k_with_ios_viewport.txt.gz?rlkey=q92pdiaghic1gcu2l4q8o3i7o&st=vg06lu1p&dl=1" -O mobile_user_agents_500k_with_viewport.txt.gz
 
       - name: Run Script in Virtual Display
         run: xvfb-run python test.py
