--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        instance: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]   # 5 parallel runners
+        instance: [1]   # 5 parallel runners
 
     steps:
       - name: Checkout repository
@@ -37,5 +37,5 @@ jobs:
       - name: Run Script in Virtual Display
         env:
           INSTANCE_ID: ${{ matrix.instance }}
-        run: xvfb-run node test.js
+        run: xvfb-run node secret.js
         
